--- a/config/content.htm
+++ b/config/content.htm
@@ -33,7 +33,158 @@
 <h1>stage3-ag3</h1>
 <h1>Task</h1>
 <h2>Task1</h2>
-<h2>Task2</h2>
+<p><span>讀取 stage3_2a.txt, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結.</span></p>
+<p><span>已知 <a href="http://mde.tw/cd2021/downloads/stage3/stage3_2a.txt">stage3_2a.txt</a><span><span> </span></span><span>內容, 以及初步資料讀取程式:</span></span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># open file, default is read mode, since txt content no chinese char
+# no encoding = "UTF-8" is needed
+with open("stage3_2a.txt") as fh:
+    # readlines will read into the whole line and put into list format
+    # has \n at the end of each line
+    data = fh.readlines()
+#print(len(data))
+for i in range(len(data)):
+    group = data[i].rstrip("\n").split("\t")
+    print(group)
+# the following will use group data to generate needed html</pre>
+<p><span>以下為每組亂數抽選 2 名組員的程式碼:</span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># open file, default is read mode, since txt content no chinese char
+# no encoding = "UTF-8" is needed
+import random
+ 
+# number of group menber to draw
+num = 2
+ 
+# check if data is "" or not
+def notVacant(data):
+    if data == "":
+        return False
+    else:
+        return True
+         
+with open("stage3_2b.txt") as fh:
+    # readlines will read into the whole line and put into list format
+    # has \n at the end of each line
+    data = fh.readlines()
+#print(len(data))
+# big group list
+bgroup = []
+# count from the second group member
+sgroup = []
+for i in range(len(data)):
+    group = data[i].rstrip("\n").split("\t")
+    #print(group)
+    # use mem to count the total number of each group
+    mem = 0
+    # final group data
+    fgroup = []
+    # count from the second group member, eliminate the first element
+    sgroup = group[1:]
+    # get only the odd index number
+    igroup = [i for i in range(len(sgroup)) if i % 2 == 1]
+    for j in igroup:
+        # index starts from 0 which is j-1 when j=1
+        if notVacant(sgroup[j-1]) == True:
+            mem += 1
+            fgroup.append(sgroup[j-1])
+    print("group " + str(i+1) + ":" + str(mem))
+    # shuffle the fgroup list
+    random.shuffle(fgroup)
+    # draw num of member from final group list: fgroup
+    for k in range(num):
+        try:
+            print(fgroup[k])
+        except:
+            # num is greater than total number of this group
+            print("no such member")
+    # seperator
+    print("-"*20)
+# the following will use group data to generate needed html</pre>
+<p></p><h3>first task</h3>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">def stu2a(account):
+    if account == "40823107":
+        return account + "-2"
+    elif account[0:3] == "407":
+        return "s" + account
+    else:
+        return account
+ 
+teamb = []
+ 
+# open file, default is read mode, since txt content no chinese char
+# no encoding = "UTF-8" is needed
+with open("stage3_2a.txt") as fh:
+    # readlines will read into the whole line and put into list format
+    # has \n at the end of each line
+    data = fh.readlines()
+#print(len(data))
+for i in range(len(data)):
+    group = data[i].rstrip("\n").split("\t")
+    teamb.append(group)
+     
+output = ""    
+seperator = "-"*10 + "&lt;br /&gt;"
+ 
+for i in teamb[0:]:
+    team = i[0]
+    leader = stu2a(i[1])
+    m1 = stu2a(i[3])
+    m2 = stu2a(i[5])
+    m3 = stu2a(i[7])
+    m4 = stu2a(i[9])
+    m5 = stu2a(i[11])
+    m6 = stu2a(i[13])
+     
+    try:
+        m7 = stu2a(i[15])
+    except:
+        m7 = ""
+    try:
+        m8 = stu2a(i[17])
+    except:
+        m8 = ""
+         
+    leaderrepo = "&lt;a href='http://github.com/" + leader + "/cd2021'&gt;" + leader + " repo&lt;/a&gt;"
+    leadersite = "&lt;a href='http://" + leader + ".github.io/cd2021'&gt;" + leader +  " site&lt;/a&gt;"
+    m1repo = "&lt;a href='http://github.com/" + m1 + "/cd2021'&gt;" + m1 + " repo&lt;/a&gt;"
+    m1site = "&lt;a href='http://" + m1 + ".github.io/cd2021'&gt;" + m1 +  " site&lt;/a&gt;"
+    m2repo = "&lt;a href='http://github.com/" + m2 + "/cd2021'&gt;" + m2 + " repo&lt;/a&gt;"
+    m2site = "&lt;a href='http://" + m2 + ".github.io/cd2021'&gt;" + m2 +  " site&lt;/a&gt;"
+    m3repo = "&lt;a href='http://github.com/" + m3 + "/cd2021'&gt;" + m3 + " repo&lt;/a&gt;"
+    m3site = "&lt;a href='http://" + m3 + ".github.io/cd2021'&gt;" + m3 +  " site&lt;/a&gt;"
+    m4repo = "&lt;a href='http://github.com/" + m4 + "/cd2021'&gt;" + m4 + " repo&lt;/a&gt;"
+    m4site = "&lt;a href='http://" + m4 + ".github.io/cd2021'&gt;" + m4 +  " site&lt;/a&gt;"
+    m5repo = "&lt;a href='http://github.com/" + m5 + "/cd2021'&gt;" + m5 + " repo&lt;/a&gt;"
+    m5site = "&lt;a href='http://" + m5 + ".github.io/cd2021'&gt;" + m5 +  " site&lt;/a&gt;"
+    m6repo = "&lt;a href='http://github.com/" + m6 + "/cd2021'&gt;" + m6 + " repo&lt;/a&gt;"
+    m6site = "&lt;a href='http://" + m6 + ".github.io/cd2021'&gt;" + m6 +  " site&lt;/a&gt;"
+  
+ 
+    teamrepo = "&lt;a href='http://github.com/" + leader + "/" + team + "'&gt;" + team + " repo&lt;/a&gt;"
+    teamsite =  "&lt;a href='http://" + m1 + ".github.io/" + team + "'&gt;" + team +  " site&lt;/a&gt;"
+ 
+    output += teamrepo + " | " + teamsite + " | " +leaderrepo + " | " + leadersite + " | " +m1repo + " | " + m1site + " | " +m2repo + " | " + m2site + " | " +m3repo + " | " + m3site + " | " +m4repo + " | " + m4site + " | " +m5repo + " | " + m5site + " | " +m6repo + " | " + m6site 
+     
+    if m7 != "":
+       m7repo = "&lt;a href='http://github.com/" + m7 + "/cd2021'&gt;" + m7 + " repo&lt;/a&gt;"
+       m7site = "&lt;a href='http://" + m7 + ".github.io/cd2021'&gt;" + m7 +  " site&lt;/a&gt;"   
+       output += " |  " + m7repo + "| " + m7site
+    else:
+        output += "" 
+     
+    if m8 != "":
+       m8repo = "&lt;a href='http://github.com/" + m8 + "/cd2021'&gt;" + m8 + " repo&lt;/a&gt;"
+       m8site = "&lt;a href='http://" + m8 + ".github.io/cd2021'&gt;" + m8 +  " site&lt;/a&gt;"   
+       output += " |  " + m8repo + "| " + m8site + "&lt;br /&gt;" + seperator
+    else:
+        output += "&lt;br /&gt;" + seperator
+ 
+ 
+print(output)
+# the following will use group data to generate needed html</pre>
+<p>程式結果</p>
+<p><img alt="" height="238" src="/images/task1.jpg" width="303"/></p>
+<p>video<iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/_eSoBLApSkY" width="560"></iframe></p>
+<h3>second task</h3><h2>Task2</h2>
 <h2>Task3</h2>
 <h2>RoboDK</h2>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/OzVrltmZmNE" width="560"></iframe></p>
