--- a/content/second task.html
+++ b/content/second task.html
@@ -133,8 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">零件-2 << <a href='零件-2.html'>Previous</a> <a href='stage3-ag3.html'>Next</a> >> stage3-ag3<br /><h1>模擬</h1>
-<br />零件-2 << <a href='零件-2.html'>Previous</a> <a href='stage3-ag3.html'>Next</a> >> stage3-ag3</div>
+    <div id="tipue_search_content">first task << <a href='first task.html'>Previous</a> <a href='Task2.html'>Next</a> >> Task2<br /><h1>second task</h1><br />first task << <a href='first task.html'>Previous</a> <a href='Task2.html'>Next</a> >> Task2</div>
         
     <!-- footer -->
       <div class="container">
