--- a/content/W16.html
+++ b/content/W16.html
@@ -133,9 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">零件-1 << <a href='零件-1.html'>Previous</a> <a href='stage2-ag8.html'>Next</a> >> stage2-ag8<br /><h1>coppeliasim模擬</h1>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/3yt087L3Jt4" width="560"></iframe></p>
-<br />零件-1 << <a href='零件-1.html'>Previous</a> <a href='stage2-ag8.html'>Next</a> >> stage2-ag8</div>
+    <div id="tipue_search_content">stage3-ag3 << <a href='stage3-ag3.html'>Previous</a> <a href='Task.html'>Next</a> >> Task<br /><h1>W16</h1>
+<br />stage3-ag3 << <a href='stage3-ag3.html'>Previous</a> <a href='Task.html'>Next</a> >> Task</div>
         
     <!-- footer -->
       <div class="container">
