--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -236,7 +236,9 @@ robot.MoveJ([0,0,0,0,10,-200])
 <p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
 <p><br/><br/></p>
 <h2>Onshape 零組件繪製</h2>
-<h2>CoppeliaSim 4.1.0 MTB robot 場景</h2>
+<p>零組件外觀</p>
+<p><img alt="" height="230" src="/images/messageImage_1623643634390.jpg" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/6f54b75acf9e4ef494a83076/w/e452995ad7e1a9c64df94bf3/e/39bb84df4329f42896472aee">Onshape零組件位置</a></p><h2>CoppeliaSim 4.1.0 MTB robot 場景</h2>
 <h2>手臂末端加入 components-gripper-suction pad 吸盤</h2>
 <h2>逆向運動學函式</h2>
 <h2>Python remote API 逆向運動學函式</h2>
